--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -4,3 +4,4 @@
   type="text/css"
 />
 <script src="https://kit.fontawesome.com/6e00428cbd.js"></script>
+<script src="/node_modules/focus-visible/dist/focus-visible.min.js"></script>
