--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -3,5 +3,8 @@
   rel="stylesheet"
   type="text/css"
 />
-<script src="https://kit.fontawesome.com/6e00428cbd.js"></script>
+<script
+  src="https://kit.fontawesome.com/6e00428cbd.js"
+  SameSite="None Secure"
+></script>
 <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList"></script>
